# bunkervm

./: .gitattributes  .gitignore  LICENSE  README.md  bunkervm.toml  demo.tape  nervos.toml  pyproject.toml  record_demo.sh
.github/: BUNKERDESKTOP_PLAN.md  copilot-instructions.md
.github/workflows/: release.yml
bunkervm/: __init__.py  __main__.py  agent_runtime.py  audit.py  bootstrap.py  cli.py  config.py  crewai.py  dashboard.py  engine_client.py  langchain.py  mcp_server.py  multi_vm.py  openai_agents.py  runtime.py  safety.py  sandbox_client.py  vm_manager.py
bunkervm/dashboard_assets/: app.js  index.html  styles.css
bunkervm/engine/: __init__.py  api.py  client.py  config.py  daemon.py  discovery.py  models.py  platform.py  wsl_bridge.py
bunkervm/integrations/: __init__.py  base.py
desktop/: BunkerDesktop.spec  app.py  package.json
desktop/src/: app.js  index.html  styles.css
docs/: index.html
examples/: agent_demo.py  demo.py  quickstart.py  test_agent.py
examples/crewai_agent/: agent_demo.py  requirements.txt
examples/langchain_agent/: agent_demo.py  requirements.txt
examples/multi_agent_demo/: demo.py  requirements.txt
examples/openai_agent/: agent_demo.py  requirements.txt
installer/windows/: BunkerDesktop.cmd  BunkerDesktop.ps1  BunkerDesktopSetup.iss  README.md  build-installer.ps1  install-desktop.ps1  install.ps1  uninstall-helper.ps1
nervos_server/: __init__.py  __main__.py  audit.py  bootstrap.py  config.py  mcp_server.py  safety.py  sandbox_client.py  vm_manager.py
rootfs/: init
rootfs/bunkervm/: exec_agent.py  orchestrator.py  system_prompt.txt  tools.py
rootfs/nervos/: exec_agent.py  orchestrator.py  system_prompt.txt  tools.py
scripts/: setup-kvm.sh  setup-network.sh
tests/: smoke_test.py  test_engine.py  test_engine_client.py  test_escape.py  test_imports.py  test_installer_windows.py  test_integrations.py  test_langgraph.py  test_m4_windows.py  test_m5_desktop.py  test_run_code.py  test_sandbox.py  test_secure_agent.py  test_v030.py  verify_all.py
